<resources>
    <string name="app_name">PresentValueCalculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interest_rate">Interest Rate (Hint: Enter 2% as 0.02)</string>
    <string name="num_of_years">Number of Years</string>
    <string name="yearly_revenue">Yearly Revenue</string>
    <string name="revenue">Revenue</string>
    <string name="growth_rate">Growth Rate (Hint: Enter 2% as 0.02)</string>
    <string name="tot_num_years">Total Number Of Years</string>
    <string name="year_without_revenue">Years without revenue</string>
    <string name="basic_header">Basic present value calculation \n summing a set of cash flows discounted by interest rate.</string>
    <string name="hint">Enter 2% as 0.02</string>
    <string name="constant_growth_header">Present value calculation for a growing revenue stream \n
    lasting for a fixed number of years.</string>
    <string name="offset_growth_header">Present value calculation for a growing revenue stream
lasting for a fixed number of years with a specified offset.</string>
    <string name="submit">Submit</string>
    <string name="err_msg_interest">Enter interest</string>
    <string name="err_msg_num_years">Enter number of years</string>
    <string name="err_msg_yearly_revenue">Enter yearly revenue</string>
    <string name="err_msg_growth_rate">Enter growth rate</string>
    <string name="err_msg_revenue">Enter revenue</string>
    <string name="err_msg_total_num_years">Enter total number of years</string>
    <string name="err_msg_year_no_revenue">Enter years without revenue</string>


</resources>
