<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.edimaudo.presentvaluecalculator.OffsetGrowth">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offset_growth_header"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingBottom="5dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_offset_growth_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offset_growth_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/interest_rate"
                    android:inputType="number|numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_offset_growth_growth_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offset_growth_growth_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:hint="@string/growth_rate"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_offset_growth_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offset_growth_revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:hint="@string/revenue"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_offset_growth_tot_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offset_growth_tot_years"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:hint="@string/tot_num_years" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_offset_growth_years_no_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/offset_growth_years_no_revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:hint="@string/year_without_revenue" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/offset_growth_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/white"
                />



        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
